hw08_saga/deployments/kubernetes/deployment_delivery.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delivery-service-deployment
  labels:
    app: delivery-service
spec:
  selector:
    matchLabels:
      app: delivery-service
  replicas: 1
  template:
    metadata:
      labels:
        app: delivery-service
    spec:
      containers:
        - name: delivery-service
          image: julinserg/delivery_service_saga_docker_image:latest
