hw08_saga/deployments/kubernetes/deployment_order.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service-deployment
  labels:
    app: order-service
spec:
  selector:
    matchLabels:
      app: order-service
  replicas: 1
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          image: julinserg/order_service_saga_docker_image:latest
          ports:
            - containerPort: 8090
