hw08_saga/deployments/kubernetes/deployment_pay.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pay-service-deployment
  labels:
    app: pay-service
spec:
  selector:
    matchLabels:
      app: pay-service
  replicas: 1
  template:
    metadata:
      labels:
        app: pay-service
    spec:
      containers:
        - name: pay-service
          image: julinserg/pay_service_saga_docker_image:latest
