hw08_saga/deployments/kubernetes/deployment_stock.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stock-service-deployment
  labels:
    app: stock-service
spec:
  selector:
    matchLabels:
      app: stock-service
  replicas: 1
  template:
    metadata:
      labels:
        app: stock-service
    spec:
      containers:
        - name: stock-service
          image: julinserg/stock_service_saga_docker_image:latest
